--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,6 @@ jobs:
     - name: SCA Resolver
       run: |
           mkdir ${{ github.workspace }}/SCAResolver
-          ls ${{ github.workspace }}
           wget "https://sca-downloads.s3.amazonaws.com/cli/latest/ScaResolver-linux64.tar.gz"
-          tar -xzf ScaResolver-linux64.tar.gz
-          chmod 0755 ${{ github.workspace }}/SCAResolver
-          ls ${{ github.workspace }}/SCAResolver
+          tar -xvf ScaResolver-linux64.tar.gz
+          ls .
