--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,5 @@ jobs:
           wget "https://sca-downloads.s3.amazonaws.com/cli/latest/ScaResolver-linux64.tar.gz"
           tar -xvf ScaResolver-linux64.tar.gz -C ${{ github.workspace }}/SCAResolver
           ls -l .
-          ls -l ${{ github.workspace }}/SCAResolver  
+          ls -l ${{ github.workspace }}/SCAResolver
+          ${{ github.workspace }}/ScaResolver -s ${{ github.workspace }} -n scala3-example-project-git -a SCA-Champions -u ${{ secrets.CHECKMARX_SCA_USERNAME }} -p ${{ secrets.CHECKMARX_SCA_PASSWORD }} --log-level 'Verbose'
